fix z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ nav ul, footer ul {
     padding: 10px;
     list-style: none;
     font-weight: bold;
+    z-index: 9999;
 }
 nav ul li, footer ul li {
     display: inline;
